e2e-testing/kuttl/weighted-routes/00-base.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: weighted-routes
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '7'
  labels:
    app: test-app
    version: shared
  name: test-app
  namespace: weighted-routes
spec:
  progressDeadlineSeconds: 1200
  replicas: 2
  selector:
    matchLabels:
      app: test-app
      version: shared
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: test-app
        app.kubernetes.io/instance: test-app
        version: shared
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: node.riskified.com/capacityType
                    operator: In
                    values:
                      - spot
              weight: 100
      containers:
        - image: willejs/go-hello-world
          imagePullPolicy: IfNotPresent
          name: server
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-app
    purpose: main
  name: test-app-service
  namespace: weighted-routes
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: test-app
  type: ClusterIP
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  labels:
    app: test-app
  name: test-app
  namespace: weighted-routes
spec:
  host: test-app-service.weighted-routes.svc.cluster.local
  subsets:
    - labels:
        version: shared
        rollouts-pod-template-hash: 84f87694c8
      name: shared
    - labels:
        version: shared
        rollouts-pod-template-hash: 84f87694c8
      name: canary
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: test-app
  name: test-app-vs
  namespace: weighted-routes
spec:
  gateways:
    - gateways/private-default-1
    - mesh
  hosts:
    - test-app-service.weighted-routes.svc.cluster.local
    - workshop-nisan.staging.riskxint.com
  http:
    - headers:
        request:
          add:
            x-request-start: t=%START_TIME(%s.%3f)%
          set:
            X-FORWARDED-PROTO: https
        response:
          remove:
            - x-envoy-upstream-healthchecked-cluster
            - x-envoy-upstream-service-time
      match:
        - gateways:
            - mesh
      name: in-cluster-default
      route:
        - destination:
            host: test-app-service.weighted-routes.svc.cluster.local
            port:
              number: 80
            subset: shared
          weight: 100
        - destination:
            host: test-app-service.weighted-routes.svc.cluster.local
            port:
              number: 80
            subset: canary
          weight: 0
    - headers:
        request:
          add:
            x-request-start: t=%START_TIME(%s.%3f)%
          set:
            X-FORWARDED-PROTO: https
        response:
          remove:
            - x-envoy-upstream-healthchecked-cluster
            - x-envoy-upstream-service-time
      match:
        - gateways:
            - gateways/private-default-1
          uri:
            prefix: /nisan
      name: nisan
      route:
        - destination:
            host: test-app-service.weighted-routes.svc.cluster.local
            port:
              number: 80
            subset: shared
          weight: 100
        - destination:
            host: test-app-service.weighted-routes.svc.cluster.local
            port:
              number: 80
            subset: canary
          weight: 0
    - headers:
        request:
          add:
            x-request-start: t=%START_TIME(%s.%3f)%
          set:
            X-FORWARDED-PROTO: https
        response:
          remove:
            - x-envoy-upstream-healthchecked-cluster
            - x-envoy-upstream-service-time
      match:
        - gateways:
            - gateways/private-default-1
          uri:
            prefix: /haim
      name: haim
      route:
        - destination:
            host: test-app-service.weighted-routes.svc.cluster.local
            port:
              number: 80
            subset: shared
          weight: 100
        - destination:
            host: test-app-service.weighted-routes.svc.cluster.local
            port:
              number: 80
            subset: canary
          weight: 0
    - headers:
        request:
          add:
            x-request-start: t=%START_TIME(%s.%3f)%
          set:
            X-FORWARDED-PROTO: https
        response:
          remove:
            - x-envoy-upstream-healthchecked-cluster
            - x-envoy-upstream-service-time
      match:
        - gateways:
            - gateways/private-default-1
          uri:
            prefix: /
      name: default
      route:
        - destination:
            host: test-app-service.weighted-routes.svc.cluster.local
            port:
              number: 80
            subset: shared
          weight: 100
        - destination:
            host: test-app-service.weighted-routes.svc.cluster.local
            port:
              number: 80
            subset: canary
          weight: 0
