e2e-testing/kuttl/weighted-routes/02-assert.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    riskified.com/dynamic-environment: default/dynamicenv-weighted-routes
  labels:
    app: test-app
  name: test-app-vs
  namespace: weighted-routes
spec:
  gateways:
  - gateways/private-default-1
  - mesh
  hosts:
  - test-app-service.weighted-routes.svc.cluster.local
  - workshop-nisan.staging.riskxint.com
  http:
  - headers:
      request:
        add:
          x-request-start: t=%START_TIME(%s.%3f)%
        set:
          X-FORWARDED-PROTO: https
      response:
        remove:
        - x-envoy-upstream-healthchecked-cluster
        - x-envoy-upstream-service-time
    match:
    - gateways:
      - mesh
      headers:
        end-user:
          prefix: jason
    # name: dynamic-environment-default-dynamicenv-weighted-routes-a205bdfcab
    route:
    - destination:
        host: test-app-service.weighted-routes.svc.cluster.local
        port:
          number: 80
        subset: default-dynamicenv-weighted-routes
  - headers:
      request:
        add:
          x-request-start: t=%START_TIME(%s.%3f)%
        set:
          X-FORWARDED-PROTO: https
      response:
        remove:
        - x-envoy-upstream-healthchecked-cluster
        - x-envoy-upstream-service-time
    match:
    - gateways:
      - mesh
    name: in-cluster-default
    route:
    - destination:
        host: test-app-service.weighted-routes.svc.cluster.local
        port:
          number: 80
        subset: shared
      weight: 80
    - destination:
        host: test-app-service.weighted-routes.svc.cluster.local
        port:
          number: 80
        subset: canary
      weight: 20
  - headers:
      request:
        add:
          x-request-start: t=%START_TIME(%s.%3f)%
        set:
          X-FORWARDED-PROTO: https
      response:
        remove:
        - x-envoy-upstream-healthchecked-cluster
        - x-envoy-upstream-service-time
    match:
    - gateways:
      - gateways/private-default-1
      headers:
        end-user:
          prefix: jason
      uri:
        prefix: /nisan
    # name: dynamic-environment-default-dynamicenv-weighted-routes-a3918d5502
    route:
    - destination:
        host: test-app-service.weighted-routes.svc.cluster.local
        port:
          number: 80
        subset: default-dynamicenv-weighted-routes
  - headers:
      request:
        add:
          x-request-start: t=%START_TIME(%s.%3f)%
        set:
          X-FORWARDED-PROTO: https
      response:
        remove:
        - x-envoy-upstream-healthchecked-cluster
        - x-envoy-upstream-service-time
    match:
    - gateways:
      - gateways/private-default-1
      uri:
        prefix: /nisan
    name: nisan
    route:
    - destination:
        host: test-app-service.weighted-routes.svc.cluster.local
        port:
          number: 80
        subset: shared
      weight: 80
    - destination:
        host: test-app-service.weighted-routes.svc.cluster.local
        port:
          number: 80
        subset: canary
      weight: 20
  - headers:
      request:
        add:
          x-request-start: t=%START_TIME(%s.%3f)%
        set:
          X-FORWARDED-PROTO: https
      response:
        remove:
        - x-envoy-upstream-healthchecked-cluster
        - x-envoy-upstream-service-time
    match:
    - gateways:
      - gateways/private-default-1
      headers:
        end-user:
          prefix: jason
      uri:
        prefix: /haim
    # name: dynamic-environment-default-dynamicenv-weighted-routes-c003a3d137
    route:
    - destination:
        host: test-app-service.weighted-routes.svc.cluster.local
        port:
          number: 80
        subset: default-dynamicenv-weighted-routes
  - headers:
      request:
        add:
          x-request-start: t=%START_TIME(%s.%3f)%
        set:
          X-FORWARDED-PROTO: https
      response:
        remove:
        - x-envoy-upstream-healthchecked-cluster
        - x-envoy-upstream-service-time
    match:
    - gateways:
      - gateways/private-default-1
      uri:
        prefix: /haim
    name: haim
    route:
    - destination:
        host: test-app-service.weighted-routes.svc.cluster.local
        port:
          number: 80
        subset: shared
      weight: 80
    - destination:
        host: test-app-service.weighted-routes.svc.cluster.local
        port:
          number: 80
        subset: canary
      weight: 20
  - headers:
      request:
        add:
          x-request-start: t=%START_TIME(%s.%3f)%
        set:
          X-FORWARDED-PROTO: https
      response:
        remove:
        - x-envoy-upstream-healthchecked-cluster
        - x-envoy-upstream-service-time
    match:
    - gateways:
      - gateways/private-default-1
      headers:
        end-user:
          prefix: jason
      uri:
        prefix: /
    # name: dynamic-environment-default-dynamicenv-weighted-routes-c413deda5d
    route:
    - destination:
        host: test-app-service.weighted-routes.svc.cluster.local
        port:
          number: 80
        subset: default-dynamicenv-weighted-routes
  - headers:
      request:
        add:
          x-request-start: t=%START_TIME(%s.%3f)%
        set:
          X-FORWARDED-PROTO: https
      response:
        remove:
        - x-envoy-upstream-healthchecked-cluster
        - x-envoy-upstream-service-time
    match:
    - gateways:
      - gateways/private-default-1
      uri:
        prefix: /
    name: default
    route:
    - destination:
        host: test-app-service.weighted-routes.svc.cluster.local
        port:
          number: 80
        subset: shared
      weight: 80
    - destination:
        host: test-app-service.weighted-routes.svc.cluster.local
        port:
          number: 80
        subset: canary
      weight: 20
